--- a/config/201-clusterrolebinding.yaml
+++ b/config/201-clusterrolebinding.yaml
@@ -7,6 +7,7 @@ metadata:
   name: service-binding-controller-admin
   labels:
     bindings.labs.vmware.com/release: devel
+    bindings.labs.vmware.com/admin: "true"
 subjects:
   - kind: ServiceAccount
     name: controller
