--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,13 +20,13 @@ jobs:
         go-version: 1.18.x
     - name: Test
       run: go test ./... -coverprofile cover.out
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
     - name: Scan Inclusive Terminology
       uses: get-woke/woke-action@v0
       with: 
         fail-on-error: true
         woke-args: -c https://via.vmw.com/its-woke-rules
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
 
   stage:
     needs: test
@@ -188,7 +188,7 @@ jobs:
         docker network connect kind local-registry
 
         # Document the local registry
-        # https://github.com/kubernetes/enhancements/tree/master/keps/sig-cluster-lifecycle/generic/1755-communicating-a-local-registry
+        # https://github.com/kubernetes/enhancements/tree/master/keps/sig-cluster-lifecycle/generic/1755-communicating-a-local-registry # wokeignore:rule=master
         cat <<EOF | kubectl apply -f -
         apiVersion: v1
         kind: ConfigMap
