--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,8 @@ jobs:
     - uses: actions/setup-go@v3
       with:
         go-version: 1.18.x
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - uses: vmware-tanzu/carvel-setup-action@v1
     - run: |
         imgpkg version
@@ -141,6 +143,8 @@ jobs:
     - uses: vmware-tanzu/carvel-setup-action@v1
       with:
         imgpkg: v0.29.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - run: |
         imgpkg version
         kbld version
