build: Fix for multiple kapp changes
Signed-off-by: Rashed Kamal <krashed@vmware.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -306,7 +306,7 @@ jobs:
         set -o nounset
         set -o pipefail
 
-        deploys=$(kapp app-change list -a service-bindings-ctrl --json | jq '.Tables[0].Rows | length')
+        deploys=$(kapp app-change list -a service-bindings.app --json | jq '.Tables[0].Rows | length')
         if [ "$((deploys))" -gt 1 ]; then
           echo "Too many app changes for the service-binding package, expected 1 found ${deploys}"
           exit 1
