fix: Update securityContext config in deployment
Signed-off-by: Diego Alfonso <dalfonso@vmware.com>

--- a/config/manager.yaml
+++ b/config/manager.yaml
@@ -52,3 +52,13 @@ spec:
           value: config-observability
         - name: METRICS_DOMAIN
           value: labs.vmware.com/bindings
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
+          seccompProfile:
+            type: RuntimeDefault
+          runAsNonRoot: true
+          runAsUser: 999
+          runAsGroup: 999
