Fix allowPrivilegeEscalation value

--- a/config/carvel/openshift.yaml
+++ b/config/carvel/openshift.yaml
@@ -47,7 +47,7 @@ allowHostIPC: false
 allowHostNetwork: false
 allowHostPID: false
 allowHostPorts: false
-allowPrivilegeEscalation: true
+allowPrivilegeEscalation: false
 allowPrivilegedContainer: false
 allowedCapabilities: null
 apiVersion: security.openshift.io/v1
